# prototype

./: CHANGELOG.md  Cargo.toml  README.md
lib/game-loop/: Cargo.toml
lib/game-loop/src/: lib.rs
src/: error.rs  main.rs  state.rs
